--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
   </dependencies>
 
   <build>
+    <finalName>bharaht-web-project</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
