--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java-version>17</java-version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <java-version>17</java-version>
   </properties>
 
   <dependencyManagement>
